@@ -1,16 +1,16 @@
-plugins {
-    id 'com.diffplug.gradle.spotless' version '3.20.0'
-}
-
-spotless {
-    java {
-        googleJavaFormat('1.7')
-    }
-}
+//plugins {
+//    id 'com.diffplug.gradle.spotless' version '3.20.0'
+//}
+//
+//spotless {
+//    java {
+//        googleJavaFormat('1.7')
+//    }
+//}
 
 apply plugin: 'java'
 
-version = '2.28.0-SNAPSHOT' 
+version = '2.28.0-SNAPSHOT'
 ext.dependentVersion = '2.28.0-SNAPSHOT'
 
 task copyDomaResources(type: Sync) {
@@ -24,12 +24,14 @@ task copyDomaResources(type: Sync) {
 compileJava {
     dependsOn copyDomaResources
     options.encoding = 'UTF-8'
-    options.compilerArgs = ['-Adoma.domain.converters=org.seasar.doma.it.domain.DomainConverterProvider']
+    options.compilerArgs = ['-Adoma.domain.converters=org.seasar.doma.it.domain.DomainConverterProvider',
+                            '--enable-preview']
 }
 
 compileTestJava {
     options.encoding = 'UTF-8'
-    options.compilerArgs += ["-proc:none"]
+    options.compilerArgs += ['-proc:none',
+                             '--enable-preview']
 }
 
 jar {
@@ -43,6 +45,7 @@ test {
     systemProperty 'user', jdbcUser
     systemProperty 'password', jdbcPassword
     useJUnitPlatform()
+    jvmArgs(['--enable-preview'])
 }
 
 repositories {
